Attempts to fix admin